--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,27 +6,34 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "axios": "^1.9.0",
+    "axios": "^1.7.7",
+    "chat-app": "file:..",
     "lucide-react": "^0.459.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.5.0",
     "react-router-dom": "^6.28.0",
     "socket.io-client": "^4.8.1",
-    "zustand": "^5.0.5"
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.4.1",
-    "@vitejs/plugin-vue": "^5.2.2",
-    "autoprefixer": "^10.4.21",
-    "daisyui": "^5.0.37",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
-    "vite": "^6.3.1"
+    "@eslint/js": "^9.13.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.14",
+    "eslint": "^9.13.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.11.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
+    "vite": "^5.4.10"
   }
 }
